/*
 * $Id: ChangeLog,v 1.3831 2005/02/17 07:53:22 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2005-02-17 15:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  + makefile.gc
  + make_gc.bat
    * another approach of building xHarbour with MinGW under Windows

    /*
    Note: Initial upload, only for ST. Modification for MT is appreciated.
    */

2005-02-17 14:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbpp/hbpp.c
    * make consistent function declaration hb_pp_fopen()

2005-02-17 14:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/gtwvw/gtwvw.c
  * contrib/gtwvw/hbgtwvw.h
    ! update things brought from gtwin
    ! comment some unused functions

2005-02-16 16:55 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/simplex.c
    * Moved RESET_LEX() above #include LEX_RULES to make it usable by lexical definition sources.
  * source/macro/macro.slx
    * Use RESET_LEX() hb_compFlexNew() instead of hard coded reset.

  /* Above fixes macro compilation error, when last macro processed errored
     on a non terminated literal. */

2005-02-16 11:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/teditor.prg
    ! Fixed for detect HardCR when line ends with blank space at
      the width limit (plus 1).

2005-02-15 18:29 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/setkey.c
    ! Fixed to return NIL when "pIsActive" is false.
    ! Fixed to validate for allow only codeblocks in "pIsActive" option.

2005-02-16 05:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/winos.prg
    ! correction on my recent changes on function OS_ISWTSCLIENT().

2005-02-16 05:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/win32prn.prg
    ! reinstate	codes when __WRITE_FONT_INFO_TO_FILE__ is defined (without